test/typecheck/bad-function-result-type-mismatch.txt
;;; ERROR: 1
(module
  (func (result i32)
    f32.const 0))
(;; STDERR ;;;
out/test/typecheck/bad-function-result-type-mismatch.txt:4:5: error: type mismatch in implicit return, expected i32 but got f32.
    f32.const 0))
    ^^^^^^^^^^^
;;; STDERR ;;)
